feat: ttt subcommand `spawner` previous getspawner, near, resetlimit command arenow subcommand of spawner. ex. `/ttt spawner near` `getspawner` command name changed to `get`. ex `/ttt spawner get ~`